@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.3.0
 
+	- Optimized Fl_Group::clear() and Fl_Scroll::clear() as
+	  discussed in fltk.development in "Fl_Group::clear SLOW!"
+	  on Feb. 06/07, 2010 (no STR)
 	- Replaced _WIN32 symbols that had come with UTF-8 and the
 	  new Fl_Table widget with WIN32
 	- Fixed a buffer overflow in fl_utf8from_mb() (STR #2279)
